--- a/E_commerce/templates/thank_you.html
+++ b/E_commerce/templates/thank_you.html
@@ -34,7 +34,7 @@
 
       <div class="border p-4 text-center w-100">
           <h5 class="fw-bold mb-2">Thank You for Contacting us.</h5>
-          <p class="mb-0">We have recived your message. We will reply you as soon as possible.</p>
+          <p class="mb-0">We have received your message. We will reply you as soon as possible.</p>
       </div>
 
     </div>
