--- a/E_commerce/templates/accounts/authentication_login.html
+++ b/E_commerce/templates/accounts/authentication_login.html
@@ -64,7 +64,7 @@
                         <input type="password" name="password" class="form-control rounded-0" id="examplePassword">
                       </div>
                       <div class="col-12">
-                        <a href="javascript:;" class="text-content btn bg-light rounded-0 w-100"><i class="bi bi-lock me-2"></i>Forgot Password</a>
+                        <a href="{% url 'authentication_reset_password' %}" class="text-content btn bg-light rounded-0 w-100"><i class="bi bi-lock me-2"></i>Forgot Password</a>
                       </div>
                      <div class="col-12">
                        <hr class="my-0">
