--- a/E_commerce/templates/wishlist.html
+++ b/E_commerce/templates/wishlist.html
@@ -27,7 +27,7 @@
     <div class="container">
       <div class="d-flex align-items-center px-3 py-2 border mb-4">
         <div class="text-start">
-          <h4 class="mb-0 h4 fw-bold">Wishlist (10 Items)</h4>
+          <h4 class="mb-0 h4 fw-bold">Wishlist ({{products.count}} Items)</h4>
        </div>
        <div class="ms-auto">
         <a href="{%url 'index'%}" type="button" class="btn btn-light btn-ecomm">Continue Shopping</a>
