--- a/E_commerce/templates/cart.html
+++ b/E_commerce/templates/cart.html
@@ -26,7 +26,7 @@
     <div class="container">
       <div class="d-flex align-items-center px-3 py-2 border mb-4">
         <div class="text-start">
-          <h4 class="mb-0 h4 fw-bold">My Bag (8 items)</h4>
+          <h4 class="mb-0 h4 fw-bold">My Bag ({{carts.count}} items)</h4>
        </div>
        <div class="ms-auto">
         <a href="{%url 'index'%}" class="btn btn-light btn-ecomm">Continue Shopping</a>
@@ -51,7 +51,7 @@
                     </div>
                   </div>
                   <div class="d-grid gap-2 align-self-start align-self-lg-center">
-                    <a href={%url 'remove_cart' cart.pk%} class="btn btn-ecomm"><i class="bi bi-x-lg me-2"></i>Remove</a>
+                    <a href={%url 'remove_cart' cart.pk%} class="btn btn-ecomm"><i class="bi bi-x-lg me-2"></i>Remove</a> 
                     <button type="button" class="btn dark btn-ecomm"><i class="bi bi-suit-heart me-2"></i>Move to Wishlist</button>
                  </div>
                 </div>
