--- a/E_commerce/templates/cart.html
+++ b/E_commerce/templates/cart.html
@@ -200,7 +200,7 @@
   <!--end footer-->
 
   <footer class="footer-strip text-center py-3 bg-section-2 border-top positon-absolute bottom-0">
-    <p class="mb-0 text-muted">© 2022. www.example.com | All rights reserved.</p>
+    <p class="mb-0 text-muted">© 2022. www.KassyandI.com | All rights reserved.</p>
   </footer>
 
 
