--- a/E_commerce/templates/contact_us.html
+++ b/E_commerce/templates/contact_us.html
@@ -78,7 +78,7 @@
           <div class="p-3 border">
             <div class="address mb-3">
               <h5 class="mb-0 fw-bold">Address</h5>
-              <p class="mb-0 font-12">lagos, Nigeria</p>
+              <p class="mb-0 font-12">Lagos, Nigeria</p>
             </div>
             <hr>
             <div class="phone mb-3">
@@ -89,7 +89,7 @@
             <hr>
             <div class="email mb-3">
               <h5 class="mb-0 fw-bold">Email</h5>
-              <p class="mb-0 font-13">mail@example.com</p>
+              <p class="mb-0 font-13">mail@KassyandI.com</p>
             </div>
             <hr>
             <div class="working-days mb-0">
@@ -160,12 +160,12 @@
              </div>
              <div class="mb-3 mt-3">
               <h5 class="mb-0 fw-bold">Support</h5>
-              <p class="mb-0 text-muted">support@example.com</p>
+              <p class="mb-0 text-muted">support@KassyandI.com</p>
              </div>
   <!--end footer-->
 
   <footer class="footer-strip text-center py-3 bg-section-2 border-top positon-absolute bottom-0">
-    <p class="mb-0 text-muted">© 2022. www.example.com | All rights reserved.</p>
+    <p class="mb-0 text-muted">© 2022. www.KassyandI.com | All rights reserved.</p>
   </footer>
 
 
