--- a/E_commerce/templates/product_details.html
+++ b/E_commerce/templates/product_details.html
@@ -332,12 +332,12 @@
              </div>
              <div class="mb-3 mt-3">
               <h5 class="mb-0 fw-bold">Support</h5>
-              <p class="mb-0 text-muted">support@example.com</p>
+              <p class="mb-0 text-muted">support@KassyandI.com</p>
              </div>
   <!--end footer-->
 
   <footer class="footer-strip text-center py-3 bg-section-2 border-top positon-absolute bottom-0">
-    <p class="mb-0 text-muted">© 2022. www.example.com | All rights reserved.</p>
+    <p class="mb-0 text-muted">© 2022. www.KassyandI.com | All rights reserved.</p>
   </footer>
 
 
