--- a/E_commerce/templates/index.html
+++ b/E_commerce/templates/index.html
@@ -543,7 +543,7 @@
              </div>
              <div class="mb-3 mt-3">
               <h5 class="mb-0 fw-bold">Support</h5>
-              <p class="mb-0 text-muted">support@example.com</p>
+              <p class="mb-0 text-muted">support@KassyandI.com</p>
              </div>
              <!-- <div class="">
               <h5 class="mb-0 fw-bold">Toll Free</h5>
@@ -578,7 +578,7 @@
   <!--end footer-->
 
   <footer class="footer-strip text-center py-3 bg-section-2 border-top positon-absolute bottom-0">
-    <p class="mb-0 text-muted">© 2022. www.example.com | All rights reserved.</p>
+    <p class="mb-0 text-muted">© 2022. www.KassyandI.com | All rights reserved.</p>
   </footer>
 
 
