Added sign up button

--- a/E_commerce/templates/base.html
+++ b/E_commerce/templates/base.html
@@ -176,6 +176,9 @@
         <li class="nav-item ml-3 btn-xs">
           <a class="nav-link btn btn-outline-info buttons " href="{%url 'authentication_login' %}">Login</a>
         </li>
+        <li class="nav-item ml-3 btn-xs">
+          <a class="nav-link btn btn-outline-info buttons " href="{%url 'signup_user' %}">Sign Up</a>
+        </li>
         {% endif %}
       </ul>
     </nav>
