Fixed some CSS issues

--- a/E_commerce/templates/billing_details.html
+++ b/E_commerce/templates/billing_details.html
@@ -201,7 +201,7 @@
     <p class="mb-0 text-muted">© 2022. www.KassyandI.com | All rights reserved.</p>
   </footer>
 
-
+{% comment %} 
 <!--start cart-->
 div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
   <div class="offcanvas-header bg-section-2"> 
@@ -379,7 +379,7 @@ div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="offc
     </div>
 
 </div>
-<!--end cat-->
+<!--end cat--> {% endcomment %}
 
 
 <!--Start Back To Top Button-->
