--- a/E_commerce/templates/index.html
+++ b/E_commerce/templates/index.html
@@ -365,9 +365,9 @@
                     <li class="list-group-item bg-transparent px-0">There are many variations of passages
                       available.</li>
                 </ul>
-                <div class="buttons mt-4 d-flex flex-column flex-lg-row gap-3">
-                  <a href="javascript:;" class="btn btn-lg btn-sm btn-dark btn-ecomm px-5 py-3">Buy Now</a>
-                  <a href="javascript:;" class="btn btn-lg btn-outline-dark btn-ecomm px-5 py-3">View Details</a>
+                <div class="buttons mt-4 d-flex flex-column flex-lg-row gap-3" id="mm">
+                  <a href="javascript:;" class="btn btn-lg btn-sm btn-dark btn-ecomm px-5 py-3" id="mobile">Buy Now</a>
+                  <a href="javascript:;" class="btn btn-lg btn-outline-dark btn-ecomm px-5 py-3" id="mobile">View Details</a>
                 </div>
               </div>
             </div>
