--- a/E_commerce/static/assets/css/style.css
+++ b/E_commerce/static/assets/css/style.css
@@ -68,7 +68,6 @@ h6 {
 }
 
 .buttons {
-    width: 90px !important;
     padding: 0.3rem !important;
     margin-left: 0.5rem !important;
 }
@@ -89,11 +88,8 @@ h6 {
 
 .top-header .secondary-menu.navbar-nav a.nav-link {
     color: #222121;
-    font-size: 18px;
-    font-weight: 600;
     text-transform: uppercase;
-    padding-right: .6rem;
-    padding-left: .6rem
+    padding-left: .6rem;
 }
 
 .top-header .navbar .dropdown-menu {
